--- a/_uploads/master.css
+++ b/_uploads/master.css
@@ -5739,8 +5739,8 @@ input[type=submit] {
 }
 @media (max-width: 991px) {
   .LightboxCollection {
-    width: calc(100% - 32px);
-    padding: 72px 0 32px;
+    width: 100%;
+/* padding: 72px 0 32px; */
     grid-template-columns: 1fr;
     gap: 28px;
   }
@@ -5749,9 +5749,14 @@ input[type=submit] {
     width: 100%;
     right: auto;
     position: relative;
+    padding: 32px;
   }
   .LightboxCollectionItems {
     grid-row: 2;
+  }
+  .LightboxCollectionEntry + .LightboxCollectionEntry {
+    padding-top: 0;
+    border-top: none;
   }
 }
 .LightboxCollectionEntryMeta {
@@ -5773,6 +5778,7 @@ input[type=submit] {
   .LightboxCollectionEntryMeta {
     max-width: 100%;
     margin-top: 14px;
+    padding: 32px;
   }
   .LightboxCollectionEntryMeta .LightboxFacts {
     max-width: 100%;
